# pipeline

./: .gitignore  DERIVED_PARAMETERS.md  DERIVED_PARAMETERS_ENHANCED.md  DERIVED_PARAMETERS_LATEST.md  LICENSE  MAP_CUSTOMIZATION_GUIDE.md  MIGRATION.md  README.md  SUBAGENT_CONTEXT_GUIDE.md  custom_filters.json  custom_workflows.json  environment.yml  field_registry.py  field_templates.py  generate_all_code.py  hrrr  hrrr_cli.py  map_enhancer.py  model_config.py  monitor_continuous.py  processor_base.py  processor_batch.py  processor_cli.py  pyproject.toml
config/: __init__.py  colormaps.py  experimental_colormaps.py
core/: downloader.py  grib_loader.py  metadata.py  plotting.py
derived_params/: __init__.py  _calculate_saturation_vapor_pressure.py  _calculate_virtual_temperature.py  _find_lcl_bolton.py  _mixing_ratio_approximation.py  _moist_adiabatic_temperature.py  _wet_bulb_approximation.py  absolute_vorticity_500_estimate.py  bulk_richardson_number.py  calculate_lapse_rate_700_500.py  calculate_mixed_layer_cape.py  calculate_mixed_layer_cin.py  calculate_most_unstable_cape.py  calculate_surface_based_cape.py  calculate_surface_based_cin.py  cape_03km.py  common.py  composite_severe_index.py  convective_velocity_scale.py  craven_brooks_composite.py  craven_significant_severe.py  cross_totals.py  crosswind_component.py  crude_lcl_estimate.py  effective_shear.py  effective_srh.py  energy_helicity_index.py  energy_helicity_index_01km.py  energy_helicity_index_03km_cape.py  energy_helicity_index_display.py  enhanced_smoke_dispersion_index.py  haines_index.py  (+44 more)
(+30 files in other folders)
